--- a/Paper_1/1.Sociology-The Discipline/2. Scope of the subject/1. Scope.md
+++ b/Paper_1/1.Sociology-The Discipline/2. Scope of the subject/1. Scope.md
@@ -2,7 +2,7 @@
 
 # Scope of Sociology
 
-## Meaning of Scope
+## A. Meaning of Scope
 
 Scope of sociology refers to its subject matter or the boundary within which it operates as a discipline. It defines what sociology will study and the extent of its academic and practical inquiry.
 
@@ -12,9 +12,9 @@ This overlapping of subject matter created confusion and led to the absence of a
 
 ---
 
-## Evolution of the Scope of Sociology
+## B. Evolution of the Scope of Sociology
 
-### Phase I: Synthetic or Encyclopedic School (1834–1880)
+### 1. Phase I: Synthetic or Encyclopedic School (1834–1880)
 
 This period was marked by the work of early sociologists who believed that the entire social life should come under the scope of sociology. They advocated for a comprehensive study of society, assuming that every aspect of social life is within the domain of sociological enquiry.
 
@@ -22,7 +22,7 @@ The dominant belief was that sociology is the study of society in its totality. 
 
 ---
 
-### Phase II: Formal or Specialized School (1880–1940)
+### 2. Phase II: Formal or Specialized School (1880–1940)
 
 Following the limited success of the synthetic school in attempting to study every aspect of society, scholars recognized the need for a more focused approach. They argued that a complete study of all dimensions of social life was not feasible. As a result, the formal school confined sociology to the study of specific aspects such as human behaviour, social action, and micro-level processes.
 
@@ -30,7 +30,7 @@ Key scholars in this school included Max Weber, Wilhelm Dilthey, and Georg Simme
 
 ---
 
-### Phase III: Integrationist School (1940–1980)
+### 3. Phase III: Integrationist School (1940–1980)
 
 During this phase, scholars realized that the rigid separation between micro and macro perspectives was counterproductive. A purely structural or purely action-oriented approach was considered inadequate for a comprehensive understanding of society.
 
@@ -38,7 +38,7 @@ Sociology, as a systematic discipline, was expected to offer a holistic analysis
 
 ---
 
-### Phase IV: Sociology of Issues (Post-1980s onwards)
+### 4. Phase IV: Sociology of Issues (Post-1980s onwards)
 
 With the rise of new societal challenges such as biotechnology, environmental degradation, and information technology, existing schools of thought were found inadequate to sociologically engage with these issues. This gave rise to a new school of thought referred to as the Sociology of Issues.
 
@@ -53,7 +53,7 @@ Notable among these were:
 
 ---
 
-## Challenges in Defining the Scope
+## C. Challenges in Defining the Scope
 
 Sociologist Walter Sprott has noted that the effort to define sociology’s scope is akin to a "brave attempt to confine an enormous mass of slippery material into a simple system of pigeon holes." This reflects the inherent difficulty in limiting sociology to a fixed domain due to the dynamic nature of society.
 
