--- a/Paper_1/1.Sociology-The Discipline/1. Modernity and social changes in Europe and the emergence of Sociology/2. Renaissance.md
+++ b/Paper_1/1.Sociology-The Discipline/1. Modernity and social changes in Europe and the emergence of Sociology/2. Renaissance.md
@@ -116,7 +116,7 @@ Renaissance resulted into 2 major revolutions - scientific and commerical
     1.1 ***Naturalism & Realism***
 
        * Art depicted life as it truly was.
-       * *Ex: Michelangelo’s "Statue of David", Da Vinci’s portraits like "Mona Lisa", "Last Supper".*
+       * Ex: Michelangelo’s "Statue of David", Da Vinci’s portraits like "Mona Lisa", "Last Supper".
 
 2. **Religious Reforms**
 
