--- a/Paper_1/2.  Sociology as  Science/1.Introduction.md
+++ b/Paper_1/2.  Sociology as  Science/1.Introduction.md
@@ -6,17 +6,22 @@
 
 * During the Enlightenment and post-Enlightenment periods, **science was seen as a liberator** from superstition, religious dogma, and myths.
 * This period emphasized **rationality and empirical reasoning**.
-* Many disciplines began to claim **scientific status**. Sociology, too, emerged as a **scientific study of society**.
+* Due to this many disciplines began to claim itself as **scientific** discipline . Sociology, too, emerged as a **scientific study of society**.
+* Sociology emerges as a discipline to study society from scientific perspective.
+* It claimed to be science of society.
+* Early Sociologists took great pride in corelating and establishing scientific terms and methods in sociological enquiry.
 
 ---
 
 ###  **Foundational Thinkers & Contributions**
 
-* **Saint Simon**: Called sociology "Social Physics", emphasized that society could be studied scientifically, like natural phenomena.
+* **Saint Simon**: Called sociology "Social Physics", emphasized that society could be studied scientifically,Just like physics studies natural phenomena.
+
 * **Auguste Comte**:
 
   * Coined the term "Sociology".
-  * Proposed scientific study of society using laws of observation and classification.
+  * Proposed scientific approach in studying of social phenomena including the ideas of **social dynamics** , **social statics** , Hierarchy of science and law of 3 stages.
+
 * **Herbert Spencer**:
 
   * Used **organic analogy** — society is like a living organism (birth, growth, decline).
