--- a/Paper_1/2.  Sociology as  Science/1.Introduction.md
+++ b/Paper_1/2.  Sociology as  Science/1.Introduction.md
@@ -24,35 +24,39 @@
 
 * **Herbert Spencer**:
 
-  * Used **organic analogy** — society is like a living organism (birth, growth, decline).
+  * Used **organic analogy** — society is like a living organism (birth, growth, decline) from simple to complex society.
   * Promoted **social Darwinism**.
+
 * **Émile Durkheim**:
 
-  * Treated sociology as a **scientific discipline**.
+  * Treated sociology as a **scientific discipline** and incorporated natural science method.
   * Used tools like **comparison**, **statistical methods**, and **multivariate analysis** to study society and human behaviour.
 
 ---
+ Early sociologists who follow positivism i.e scientific study of society, provided strong reasons for considering sociology as a science , by highlighting following similarities:
 
 ###  **Scientific Characteristics of Sociology**
 
-#### 1. **Empirical & Verifiable Observation**
+#### 1. **Empirically Verifiable Observation**
 
-* Sociology, like science, relies on observable and testable data.
+* Sociology, like science, relies/emphasis on observable and testable data.
 * *Example*: M.N. Srinivas’ study on **Sanskritisation** based on empirical data from Coorg region.
 
 #### 2. **Segmentation (Reductionism)**
 
-* Sociologists analyze phenomena by breaking them into parts and sub-parts.
+* Sociologists, just like science ,  analyze phenomena by breaking them into parts and sub-parts.
 * *Example*: Village study via caste system, jajmani system, family units — known as **reduction analysis**.
 
 #### 3. **Causal Analysis**
 
-* Sociology seeks **cause-effect relationships**, like science.
+* Sociology, seeks **cause-effect relationships**, like science. i.e establishing any reason or cause  behind any effect or output .
 * *Example*: **Max Weber** in *The Protestant Ethic and Spirit of Capitalism* — religious beliefs led to capitalism.
 
 #### 4. **Objectivity**
 
-* Sociology aims to be free of bias, values, and opinions.
+* objectivity means any information free from personal biasness or opinion
+* Sociology aims to be free of bias, values, and opinions in its sociological research by emphasising on facts over opinions/values.
+
 * *Example*: **R.K. Merton’s Theory of Deviance** identifies 5 types through objective classification.
 
 #### 5. **Theory Building**
@@ -63,12 +67,15 @@
 #### 6. **Experimentation**
 
 * Sociologists conduct experiments like scientists.
-* *Example*: **Hawthorne & Marshall Studies** — impact of illumination on worker productivity, and delayed gratification.
+* *Example*: **Hawthorne & marshmallow Studies** — impact of illumination on worker productivity, and delayed gratification, respectively 
 
 #### 7. **Reliability & Validity**
 
-* **Reliability**: Consistency of results.
+* **Reliability**: Consistency/reproduceabilty of results.
 * **Validity**: Accuracy and generalizability.
+
+  Both are emphasised by sociologits in its theories and research
+
 * *Example*: **Durkheim’s Suicide Study** emphasized both.
 
 #### 8. **Use of Scientific Method**
@@ -80,6 +87,8 @@
 
 ###  **Criticism: Why Sociology Can’t Be Fully Scientific**
 
+With emergence of formal school , it was observed that sociology would not stand on all the parameters of science.
+
 #### 1. **Dynamic Human Behaviour**
 
 * Human actions are unpredictable, influenced by free will and social context.
@@ -90,7 +99,8 @@
 
 #### 3. **Phenomenology & Ethnomethodology**
 
-* No objective reality; emphasizes **subjective experience and common-sense knowledge**.
+* There exists No objective reality; emphasizes 
+* Reality should be studied from people's perspective  through application of **subjective experience and common-sense knowledge**.
 * Hence, rejects positivist scientific model in sociology.
 
 #### 4. **Values Influence Facts**
@@ -98,12 +108,12 @@
 * Researchers’ **ideology, values, and opinions** influence outcomes.
 * *Example*: **Tepoztlán Village Study**:
 
-  * Robert Redfield saw harmony;
-  * Oscar Lewis saw conflict — researcher bias shaped findings.
+  * Robert Redfield(functionalist) saw harmony;
+  * Oscar Lewis(marxists) saw conflict — Thus researcher bias shaped findings.
 
 #### 5. **Lack of Law-like Generalisation**
 
-* Social phenomena are too diverse and evolving for fixed laws.
+* Social phenomena are too diverse and evolving for fixed laws.i.e dynamic subject matter
 
 #### 6. **Difficulty in Quantification**
 
@@ -119,7 +129,7 @@
 
 * Despite borrowing methods and tools from science, **sociology doesn’t satisfy all criteria** of natural sciences.
 * It is **neither completely scientific nor unscientific**.
-* Most scholars place it in the realm of **“Social Science”**, blending empirical inquiry with interpretive flexibility.
+* Thus safe to place it in the realm of **“Social Science”**, blending empirical inquiry with interpretive flexibility.
 
 ---
 
