--- a/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
+++ b/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
@@ -28,6 +28,18 @@
   * Frameworks that help researchers conduct rigorous research.
 
 ---
+
+## **4. Types of Research Methodologies**
+
+| **Strand**       | **Positivism**                                          | **Non-Positivism**                                            | **Anti-Positivism**                          |
+| ---------------- | ------------------------------------------------------- | ------------------------------------------------------------- | -------------------------------------------- |
+| **Understanding**         |Objective understanding of  Objective reality                                       | Subjective understanding of objective reality                          | Subjective understanding of subjective reality        |
+| **Method**       | Uses scientific method & tools                          | Develops alternate methods aligned with scientific **spirit** | Rejects scientific method entirely           |
+| **Focus**        | Understand general laws & patterns                      | Understand **meaning and culture**                            | Record experiences without generalising      |
+| **Examples**     | Statistical analysis, comparison, multivariate analysis | Verstehen, Ideal Type, Cultural Pluralism                     | Ethnomethodology, Feminism, Post-modernism   |
+| **Key Thinkers** | Auguste Comte, Emile Durkheim                           | Max Weber, Wilhelm Dilthey                                    | Feminist thinkers, Garfinkel, Postmodernists |
+
+---
 ## **3. Major Theoretical strand of research methodology includes:**
 
 ### **A. Functionalism (Linked to Positivism)**
@@ -39,7 +51,7 @@ Thus Functionalism is a theory used to **understand and build models of society*
 
 It uses the idea of **"Organismic Analogy"** – just like parts of a body (heart, lungs, brain) work together, **parts of society** do the same.
 
-###  Features of Functionalism:
+###  1. Features of Functionalism:
 
 #### (a) Structure
 
@@ -85,7 +97,108 @@ Parsons said that **every social system** (like family, school, society) must fu
 
 ---
 
-## Summary:
+### **5. Criticism of Functionalism**
+
+*(From thinkers like Marxists, Feminists, Postmodernists, Phenomenologists, etc.)*
+
+---
+
+### **1. Determinism**
+
+* Functionalism views society as a system where everything is **pre-determined to serve a purpose**.
+* It assumes that **every structure exists because it is useful**, and that society is always moving towards order and stability.
+* **Critique**: It ignores **individual agency** and the possibility that actions may not serve a functional role.
+* *Example*: If an individual chooses a homosexual companionship, it may lead to family disruption — a possibility not acknowledged by functionalist theory which sees family only as a stable unit.
+
+---
+
+### **2. Illegitimate Teleology**
+
+* Teleology means explaining something in terms of its end or purpose.
+* Functionalism assumes **every social structure exists for a specific purpose**, which may not always be true.
+* It **ignores unintended consequences** or the multifunctionality of institutions.
+* *Example*: Schools are viewed only as institutions for education. But in reality, they also serve other roles like **employment generation**, **social control**, **reproduction of inequality**, etc.
+
+---
+
+### **3. Inability to Explain Social Change**
+
+* Functionalism focuses on **equilibrium**, **stability**, and **continuity**.
+* It fails to explain **rapid or revolutionary changes**, which often occur due to conflict, resistance, or contradiction within social structures.
+* *Example*: Functionalism cannot account for revolutions like the **French Revolution**, **Russian Revolution**, or **Civil Rights Movement**, which brought radical transformation in society.
+
+---
+
+### **4. Postmodernist Critique – Grand Narrative Fallacy**
+
+* Postmodernists argue that **functionalism constructs a “meta-narrative”**, trying to explain all aspects of society under one model.
+* It assumes that society is a coherent, integrated whole.
+* *Critique*: Society is **diverse, fragmented, and fluid** — no single model (like functionalism) can fully explain it.
+* *Example*: Functionalists claim to study all aspects of society, but this is **not practically possible** due to constant change and multiplicity of meanings.
+
+---
+
+### **5. Utopian & Idealistic Vision**
+
+* Functionalism paints an overly **harmonious and conflict-free picture** of society.
+* It emphasises **solidarity**, **value consensus**, and **integration**, ignoring inequality and contradictions.
+* *Marxist Critique*: Functionalism ignores **class conflict**, **power struggles**, and **oppression**.
+* *Example*: Within families, functionalism overlooks **gender conflict** — it ignores the tension that may arise due to patriarchal structures.
+
+---
+
+### **6. Tautology**
+
+* Functionalist explanations are often **circular** in logic — the explanation and the conclusion are the same.
+* Tautology means saying the same thing twice in different words.
+* *Example*: Saying “law exists because society needs law” doesn’t explain **how** or **why** it came into being — it's a **mere restatement** of the assumption.
+
+---
+
+### **7. Ethnomethodology & Phenomenology Critique**
+
+* These approaches argue that **social reality is constructed by individuals** through their daily interactions.
+* Functionalism wrongly assumes that social facts exist **objectively** and are **externally imposed** on individuals.
+* *Critique*: Reality is not fixed — it is **fluid and shaped by interpretation**.
+* People **construct meaning**, and functionalism ignores this **subjective dimension**.
+* *Conclusion*: Functionalism fails to acknowledge that meaning is **created and recreated** through interaction.
+
+---
+
+### **8. Vague, Abstract & Ambiguous Concepts**
+
+* Many functionalist ideas are **not precisely defined**.
+* Concepts like “function” or “functional prerequisite” are vague.
+* *Example*: What exactly is the function of religion, or the function of kinship? Different scholars provide different answers — making it hard to generalise or measure.
+
+---
+
+### **9. Feminist Critique**
+
+* Functionalism often **ignores women’s experiences** and contributions.
+* It presents a **male-centric view**, where roles are traditionally assigned — men as breadwinners, women as housewives.
+* *Critique*: It **fails to account for oppression**, **gender-based violence**, or **the burden of unpaid labour**.
+* Feminists argue that **families can also be sites of domination**, not just socialisation and stability.
+
+---
+
+## Despite Criticism: What Functionalism Contributed
+
+* Provided a **systematic and organised framework** to study society.
+* Helped understand how different **institutions contribute to social order**.
+* Laid foundation for **early structural sociology** (especially in the work of Emile Durkheim and Parsons).
+* Gave tools for analysing **institutional stability** and **value consensus**, particularly in relatively stable, traditional societies.
+
+---
+
+## Note:
+
+> Functionalism offers a **macro-level perspective** that is useful for understanding structure and order, but is limited when dealing with **conflict, diversity, and change**. A balanced answer must acknowledge both its **theoretical utility** and **empirical limitations**.
+
+---
+
+
+### Summary:
 
 Functionalism explains society by:
 
@@ -97,16 +210,206 @@ Functionalism explains society by:
 
 ---
 
----
 
-## **4. Types of Research Methodologies**
-
-| **Strand**       | **Positivism**                                          | **Non-Positivism**                                            | **Anti-Positivism**                          |
-| ---------------- | ------------------------------------------------------- | ------------------------------------------------------------- | -------------------------------------------- |
-| **Understanding**         |Objective understanding of  Objective reality                                       | Subjective understanding of objective reality                          | Subjective understanding of subjective reality        |
-| **Method**       | Uses scientific method & tools                          | Develops alternate methods aligned with scientific **spirit** | Rejects scientific method entirely           |
-| **Focus**        | Understand general laws & patterns                      | Understand **meaning and culture**                            | Record experiences without generalising      |
-| **Examples**     | Statistical analysis, comparison, multivariate analysis | Verstehen, Ideal Type, Cultural Pluralism                     | Ethnomethodology, Feminism, Post-modernism   |
-| **Key Thinkers** | Auguste Comte, Emile Durkheim                           | Max Weber, Wilhelm Dilthey                                    | Feminist thinkers, Garfinkel, Postmodernists |
+### **B. Marxism**
 
 ---
+
+## **Introduction**
+
+Marxism is a radical and conflict-based perspective developed by **Karl Marx**, aiming to explain the **structure of society** and its transformation through the lens of **economic and class relations**. Unlike functionalism, which focuses on order and consensus, Marxism views society as inherently **divided and conflict-ridden**, primarily due to the **economic inequality** embedded in the **mode of production**.
+
+---
+
+## **Core Concepts of Marxism**
+
+### 1. **Means of Production (MoP)**
+
+These refer to the **tools, technologies, resources, and land** used in the process of producing goods and services.
+**Example:** Land, seeds, machinery, ploughs used in farming.
+
+### 2. **Forces of Production (FoP)**
+
+The **means of production along with human labour** form the forces of production. It represents the **productive capacity** of a society.
+**Formula:** FoP = MoP + Labour
+
+### 3. **Relations of Production (RoP)**
+
+This refers to the **social relationships** between individuals in the production process. It operates on two levels:
+
+* **Man and Thing**: Ownership or non-ownership of resources.
+* **Man and Man**: Dominance or subordination (e.g., employer-employee, capitalist-worker).
+
+### 4. **Mode of Production**
+
+It is the **combination of forces of production and relations of production**, which forms the **economic base** of any society.
+Different historical stages (like **feudalism, capitalism, socialism**) are defined by their unique modes of production.
+
+---
+
+## **Class and Class Conflict**
+
+### 1. **Class Definition**
+
+A class is determined by a person’s **relationship to the means of production**. Marx categorised society into two broad classes:
+
+* **Bourgeoisie (Haves)** – Owners of the means of production.
+* **Proletariat (Have-nots)** – Those who only possess their labour.
+
+### 2. **Antagonistic Cooperation**
+
+Even though both classes are required for the production process, their interests are fundamentally opposed/antagonistic, leading to what Marx calls **"antagonistic cooperation"**.
+
+### 3. **Exploitation and Resistance**
+
+The proletariat often feels exploited in the production process. This exploitation **intensifies with time**, leading to **resistance and class struggle**.
+
+### 4. **Class Consciousness and Revolution**
+
+As exploitation grows, the working class becomes aware of their condition (**class consciousness**) and eventually revolts with a hope of ending exploitation, which can **lead to revolution and social change**.
+This provides a **justification for conflict and revolutionary change** in Marxist theory.
+
+---
+
+## **Marxism as a Theoretical Stand**
+
+Marxism believes that **all historical developments and social structures** can be understood through the **binary of haves and have-nots**, rooted in class conflict. It emphasizes that:
+
+* **Contradictions** in class interests are **permanent** and fuel social change.
+* Ideologies of the ruling class maintain the **status quo** through cultural dominance.
+* Real change comes through **conflict, not consensus**.
+
+**Example:** In any modern industry, the owners (bourgeoisie) and workers (proletariat) have **contradictory interests** — one aims to maximise profit, the other to secure wages and working conditions. This contradiction manifests as class struggle.
+
+---
+
+## **Criticisms of Marxism**
+
+### 1. **Postmodernist Critique**
+
+Marxism is critiqued as a **meta-narrative** — an overly broad and simplistic theory that tries to explain all aspects of social life through class.
+In sociological terms, a **meta-narrative** is an overarching, universal theory or explanation that claims to interpret all aspects of society through a single lens—like class, progress, or modernity.
+
+Postmodernists argue that reality is **fragmented and pluralistic**, not reducible to economic class alone.
+
+### 2. **Feminist Critique**
+
+Feminist scholars argue that Marxism **overlooks gender-based exploitation**.
+By focusing solely on class, it ignores how **patriarchy and capitalism** interact to suppress women.
+
+### 3. **Interpretive Sociology Critique**
+
+Scholars like Weber and symbolic interactionists argue Marxism is **too deterministic and ideologically biased**, ignoring **micro-level social interactions** and **subjective meanings**.
+
+### 4. **Overemphasis on Conflict**
+
+Critics claim Marxism overemphasises conflict and revolution, ignoring **stability, continuity, and consensus** that also exist in societies.
+
+### 5. **Neglect of Individual Agency**
+
+Marxism gives little room to **individual choices or roles** in shaping history, focusing only on **structural and class forces**.
+
+### 6. **Shared Problem with Functionalism**
+
+Ironically, while Marxism critiques functionalism for focusing on **solidarity**, both end up assuming that people act in predictable group-based ways — either all **have** or **have not**.
+
+---
+
+## **Conclusion**
+
+Despite criticism, Marxism remains one of the most **powerful and enduring frameworks** in sociology. It provides deep insight into:
+
+* **Class structure**
+* **Economic inequality**
+* **Power dynamics**
+* And the role of **ideology in maintaining dominance**
+
+It’s particularly relevant today in analysing **capitalism, labour movements, economic crises**, and **global inequality**.
+
+---
+
+#### **Methods Used in Positivism**
+
+---
+
+Positivism emphasizes **empirical, scientific, and objective methods** for studying social phenomena. Thinkers like **Auguste Comte**, **Emile Durkheim**, and to some extent **Karl Marx** used positivist methods to understand society.
+
+---
+
+## **1. Comparative Method**
+
+* Compares societies **across time, regions, or cultures** to identify patterns.
+* Focuses on **commonalities and differences** in social behaviour.
+
+**Example:**
+
+* Karl Marx compared **ancient, feudal, and capitalist societies** to understand changes in the mode of production.
+* Durkheim compared **European societies** to study suicide patterns. He took data from different european countries relating to suicide from 1840s till 1870s and compare them to conclude 4 types of suicide
+
+---
+
+## **2. Historical Method**
+
+* Studies the **past** to understand how institutions or behaviour **evolve over time**.
+* Involves collecting long-term data from records, documents, etc.
+
+**Example:**
+
+* Marx used historical data to analyse **class formation** and also collected past data to categorise them into different type.
+* Weber studied the **Protestant ethic** and **emergence of capitalism** in Europe using past data.
+
+---
+
+## **3. Empirical Method**
+
+* Based on **sensory observation** and **real-world data**.
+* Focuses on **verifiable evidence**, typically through fieldwork and surveys.
+
+**Example:**
+
+* Eden’s book *“State of Poor”* and John Sinclair’s *“Statistical Account of Scotland”* used empirical data to highlight/conclude poverty as a social phenomena.
+
+---
+
+## **4. Causation Method**
+
+* Explores **cause-effect relationships** between two or more variables.
+* Highly structured and quantitative.
+
+**Example:**
+
+* Durkheim in his study on **suicide** identified two key causes: **integration** and **regulation**.
+
+---
+
+## **5. Statistical Analysis**
+
+* Uses **numbers and data** to identify trends.
+* Helps in generating **objective, quantifiable** findings.
+
+**Example:**
+
+* Census data on **literacy rate** and **sex ratio** used to understand social development patterns:
+
+  * Literacy (1951): 18% → (2011): 74.04%
+  * Sex Ratio (2001): 933/1000 → (2011): 943/1000
+
+---
+
+## **6. Multivariate Analysis**
+
+* Studies the **interaction between multiple variables**.
+* Helps understand how **change in one** affects the **others**.
+
+**Example:**
+
+* Durkheim used multivariate analysis in his suicide study, linking religion, marital status, and social integration.
+
+---
+
+## **Conclusion**
+
+Positivist methods continue to guide **scientific research in sociology**. While later schools (interpretive, critical, feminist) have critiqued it for rigidity, its **emphasis on objectivity, data, and analysis** laid the foundation for sociology as a science.
+
+---
+
