--- a/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
+++ b/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
@@ -42,6 +42,8 @@
 ---
 ## **3. Major Theoretical strand of research methodology includes:**
 
+## 1. Positivists
+
 ### **A. Functionalism (Linked to Positivism)**
 
 * It is for theory building that consider anything is made up of interconnected part and subparts working together in the manner that establishes concensus and social order.
@@ -412,4 +414,123 @@ Positivism emphasizes **empirical, scientific, and objective methods** for study
 Positivist methods continue to guide **scientific research in sociology**. While later schools (interpretive, critical, feminist) have critiqued it for rigidity, its **emphasis on objectivity, data, and analysis** laid the foundation for sociology as a science.
 
 ---
+## **2. Non-Positivism**
+
+## What is Non-Positivism?
+
+* Research Methodology that provided framework to conduct a research in the field of social science
+* A research methodology developed to overcome the **limitations of positivism** in studying social reality.
+* It recognises that **social phenomena are complex**, filled with meanings and subjectivity, and **cannot always be explained** through rigid scientific laws or empirical generalisation.
+* Early positivists failed to provide law-like generalisations in sociology; hence, the **non-positivist shift** emerged.
+
+---
+
+##  Why Non-Positivism Emerged?
+
+* To capture the **essence and spirit of scientific inquiry** without rigidly following its methods.
+* Positivism couldn’t grasp the **subjective dimensions** of social life.
+* **Non-positivism accepts reality as dynamic, disorganised, and chaotic**, demanding a more flexible, meaning-oriented methodology.
+* Major Theoretical Strand includes Interpretative Approach and symbolic interactionism. Interpretative approach was developed by weber included empathetic understanding of the meanings attached by people to their social reality.
+
+---
+
+## Key Assumptions
+
+1. **Reality is not static or uniform**, but **dichotomous, unorganised, and complex**.
+2. **Objective understanding** of society is **not fully possible**.
+3. Emphasis on **subjective understanding** of reality by interpreting the **meanings individuals attach to their actions**.
+4. Sociologists use **common-sense knowledge** in interpreting everyday life.
+
+---
+
+## Major Theoretical Strand: **Interpretative Approach and symbolic interactionism**
+
+ Interpretative approach is central to non-positivism. It focuses on **understanding meanings**, not just observing behaviour.
+
+---
+
+### 1. **Verstehen Method** – (Max Weber)
+
+* A **two-step process** to study any social phenomenon:
+
+  **a) Direct Observation (Aktuelle)**
+
+  * The researcher collects **empirical and objective data** through fieldwork, observation, etc.
+
+  **b) Indirect Interpretation**
+
+  * The data is interpreted **subjectively** to understand the **inner meaning** individuals give to their actions. Thus subjective understanding of objective reality.
+
+* The method assumes that **subjective interpretation** is necessary to understand **objective events**.
+
+>  *Example:* To understand voting behaviour, one must go beyond the act (data) and grasp the voter’s belief, intent, or fear.
+
+---
+
+### 2. **Ideal Type Method** – (Weber)
+
+* A **mental construct** or **abstract model** to study real-world social phenomena.
+* It’s not a replica of reality but a **conceptual tool** that helps identify and compare **core characteristics**.
+* He called it "Ideal Type" , as it combined many ideas that is abstract related to a particular phenomena based on the common sense knowledge that facilitate researcher
+
+> *Example:*  Ideal type of **democracy** may include:
+
+* Free and fair elections
+* Universal adult franchise
+* Rule of law, etc.
+
+Sociologists use this as a **reference frame** to study actual democracies.
+
+---
+
+### 3. **Causal Pluralism**
+
+* This method analyses social events through **multiple causes**, not linear reasoning.
+* It emphasises **interpretation**, identifying and understanding **more than one cause** behind a social phenomenon.
+
+> *Example:* Unemployment may result from education mismatch, tech shifts, globalisation, etc.
+
+---
+
+## 🔸 Summary of Interpretative Approach
+
+| Feature                | Description                                                            |
+| ---------------------- | ---------------------------------------------------------------------- |
+| Empathy                | Central to understanding subjective reality (Verstehen)                |
+| Common-sense knowledge | Sociologists must incorporate native perspectives                      |
+| Dynamic Reality        | Social life is constantly evolving, needing flexible tools to study it |
+| Subjective Lens        | Priority given to actor's meaning over observer's data                 |
+
+---
+
+In this way , various method of interpretative approach offer an alternative to positivism. It is not just the blind application of scientific method in sociological enquiry but also the modification of the method to suit the search subject
+
+## 🔸 Criticism of Non-Positivism
+
+1. **Lack of Unified Methodology**
+
+   * No standardised techniques like positivism; leads to inconsistency.
+
+2. **Over-dependence on Researcher's Interpretation**
+
+   * Heavily relies on individual sociologist's ability to interpret meanings, which may lead to **bias**.
+
+3. **Objectivity-Subjectivity Dilemma**
+
+   * Often fails to **balance** scientific objectivity with sociological subjectivity.
+
+4. **Variation and Ambiguity in Outcome**
+
+   * Different researchers may interpret the same phenomenon differently, affecting **validity and reliability**.
+
+---
+
+## 🔸 Conclusion
+
+* Non-positivism marked a **paradigm shift in sociology** — from **explaining society through laws** to **understanding meanings through interpretation**.
+* It gave rise to more **humanistic and flexible approaches**, especially useful in studying culture, identity, emotions, and meaning-making.
+* Despite its critiques, it **enriched sociological inquiry**, particularly in areas where **positivism fails**.
+
+---
+
 
