--- a/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
+++ b/Paper_1/2.  Sociology as  Science/3.Major theoretical strands of research methodology.md
@@ -492,7 +492,7 @@ Sociologists use this as a **reference frame** to study actual democracies.
 
 ---
 
-## 🔸 Summary of Interpretative Approach
+## Summary of Interpretative Approach
 
 | Feature                | Description                                                            |
 | ---------------------- | ---------------------------------------------------------------------- |
@@ -505,7 +505,7 @@ Sociologists use this as a **reference frame** to study actual democracies.
 
 In this way , various method of interpretative approach offer an alternative to positivism. It is not just the blind application of scientific method in sociological enquiry but also the modification of the method to suit the search subject
 
-## 🔸 Criticism of Non-Positivism
+## Criticism of Non-Positivism
 
 1. **Lack of Unified Methodology**
 
@@ -525,7 +525,7 @@ In this way , various method of interpretative approach offer an alternative to 
 
 ---
 
-## 🔸 Conclusion
+## Conclusion
 
 * Non-positivism marked a **paradigm shift in sociology** — from **explaining society through laws** to **understanding meanings through interpretation**.
 * It gave rise to more **humanistic and flexible approaches**, especially useful in studying culture, identity, emotions, and meaning-making.
