Deleted Modernity file

--- a/Paper_1/4. Social Thinkers/4.Karl Marx/1. Laws of Dielectics and HM.md
+++ b/Paper_1/4. Social Thinkers/4.Karl Marx/1. Laws of Dielectics and HM.md
@@ -35,7 +35,7 @@ Karl Marx adopted the dialectical method from Hegel but gave it a materialist in
    Every social structure contains inherent contradictions (e.g., conflicting class interests), which propel change.
 
 2. **Law of Transformation of Quantity into Quality**
-   Gradual developments in productive forces accumulate and result in sudden, qualitative social changes (e.g., revolutions).
+   Gradual developments in productive forces accumulate and result in sudden, qualitative social changes (e.g., revolutions).Productive forces are the tools along with the labour used to create wealth. When they evolve, they pressure the existing society to evolve with them — or collapse and make way for the next stage.
 
 3. **Law of Negation of the Negation**
    Each historical stage emerges by negating the previous one. The new stage retains certain aspects but progresses to a higher form of society.
@@ -78,7 +78,7 @@ Marx viewed history as a series of stages based on how humans produce and distri
 * Two main classes: **Masters** (owned land/tools i.e means of production) and **Slaves** (labourers, who offered labour/service in exchange of some resources).
 * Slavery became the dominant form of exploitation, where he neither owned any means of production nor his own labour.
 * Society saw birth of **state authority, religion, and property**.
-* Agriculture and metal tools formed the economic base.
+* Agriculture(primitive farming) , pastoral activity and metal tools formed the economic base.
 
 #### Dialectical Application:
 
