--- a/Paper_1/4. Social Thinkers/4.Karl Marx/3. Class Struggle.md
+++ b/Paper_1/4. Social Thinkers/4.Karl Marx/3. Class Struggle.md
@@ -23,7 +23,7 @@ Marx developed a two-fold criterion to understand how classes emerge in society 
 
 ---
 
-### **1. Objective Criterion (Class-in-itself)**
+# **A. Objective Criterion (Class-in-itself)**
 
 #### **Definition:**
 
@@ -52,7 +52,7 @@ Marx developed a two-fold criterion to understand how classes emerge in society 
 
 ---
 
-### **2. Subjective Criterion (Class-for-itself)**
+# **B. Subjective Criterion (Class-for-itself)**
 
 #### **Definition:**
 
